# data_object_communication_test

./: CMakeLists.txt  README.md
common/inc/: data_object.h  data_object_protocol.h
common/src/: data_object.c  data_object_protocol.c
core/src/: main.c  test_cli.cc  test_dod.c  test_srv.cc
data/: test.csv
utils/inc/: csv_parser.h
utils/src/: csv_parser.c
